@@ -14,30 +14,30 @@
 
   <!-- Tutorial -->
   <div class="flex-item" *ngIf="!ms.game.resourceManager.scientist.unlocked">
-    <nz-card style="width: 100%;" [nzTitle]="locked" nzSize="small">
+    <nz-card style="width: 100%" [nzTitle]="locked" nzSize="small">
       <p>To unlock you need:</p>
       <ul>
         <li>
           <span
-            *ngIf="ms.game.resourceManager.technician.quantity.gte(10); else x"
+            *ngIf="ms.game.resourceManager.technician.quantity.gte(30); else x"
             nz-text
             class="text-success"
             nzType="success"
           >
             <i nz-icon nzType="check" nzTheme="outline"></i
           ></span>
-          10 Technician
+          30 Technician
         </li>
         <li>
           <span
-            *ngIf="ms.game.resourceManager.miner.quantity.gte(10); else x"
+            *ngIf="ms.game.resourceManager.miner.quantity.gte(30); else x"
             nz-text
             class="text-success"
             nzType="success"
           >
             <i nz-icon nzType="check" nzTheme="outline"></i
           ></span>
-          10 Miner
+          30 Miner
         </li>
       </ul>
     </nz-card>
